2017-01-10  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* statistics.test: Correct the tests for the test-anova-F procedure
	* statistics.tcl: Correct the namespace for the test-anova-F procedure and the comment
	* statistics.man: Correct the description of the test-anova-F procedure
	* linalg.test: Correct test solve-1.6 regarding permuted matrices
	* geometry.test: Add a simple definition of lmap for older versions of Tcl (notably 8.5)
	* interpolate.test: Correct test Interpolate-1.3 - missing keyword -result and use of existing table name

2016-08-16  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* pdf_stat.tcl: Correct the use of the argument for standard deviation, affects pdf-lognormal and cdf-lognormal
	                (ticket 002b9e8e07777425)
	* statistics.test: Correct the tests for both procedures
	* statistics.tcl: Bumped the version to 1.0.1
	* pkgIndex.tcl: Load version 1.0.1 of the statistics module

2016-08-04  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* interpolate.tcl: Correct the calculation of the weight for interpolation - cast to double
	* interpolate.test: Added test for this change
	* statistics.test: Correct the ANOVA tests (use -result)
	* linalg.test: Added test to show that permuted linear systems give the same result

2016-04-12  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* geometry.tcl: Replace the algorithm in pointInsidePolygon (ticket dc49af96c2), also add an alternative
	                method based on the winding number
	* geometry.test: Add the new test case for this ticket and adjust the outcome for an edge case (hour glass).
	                Further tests added for the alternative method and for some edge cases

2015-11-14  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* statistics.tcl: Add test-anova-F
	* pdf_stat.tcl: Add cdf-F
	* statistics.test: Add tests for test-anova-F and cdf-F
	* statistics.man: Describe test-anova-F and cdf-F